deploy.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: sprayproxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sprayproxy
  template:
    metadata:
      labels:
        app: sprayproxy
    spec:
      containers:
        - name: sprayproxy
          image: ko://github.com/redhat-appstudio/sprayproxy
          args:
            - server
          ports:
            - containerPort: 8080
              name: server
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
        - name: kube-rbac-proxy
          image: registry.redhat.io/openshift4/ose-kube-rbac-proxy:v4.12
          args:
            - "--secure-listen-address=0.0.0.0:8443"
            - "--upstream=http://127.0.0.1:6000/"
            - "--logtostderr=true"
            - "--v=0"
          ports:
            - containerPort: 8443
              protocol: TCP
              name: https
          resources:
            limits:
              cpu: 500m
              memory: 128Mi
            requests:
              cpu: 5m
              memory: 64Mi
---
apiVersion: v1
kind: Service
metadata:
  name: sprayproxy-service
  namespace: sprayproxy
spec:
  selector:
    app.kubernetes.io/name: sprayproxy
  ports:
    - name: server
      protocol: TCP
      port: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: sprayproxy-metrics-service
  namespace: sprayproxy
spec:
  selector:
    app.kubernetes.io/name: sprayproxy
  ports:
    - name: https
      protocol: TCP
      port: 8443
      targetPort: https
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: sprayproxy-route
  namespace: sprayproxy
spec:
  tls:
    termination: edge
  to:
    kind: Service
    name: sprayproxy-service
